# svgator-to-solidjs

./: Cargo.toml
src/: main.rs
