[package]
name = "svgator-to-solidjs"
version = "0.1.0"
edition = "2021"
authors = ["Christoffer Lantz <christoffer.lantz@androidbutiken.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.23"
clap = { version = "3.2.6", features = ["derive"] }