[package]
name = "svgator-to-solidjs"
version = "0.2.1"
edition = "2021"
authors = ["Christoffer Lantz <christoffer.lantz@androidbutiken.net>"]
license = "MIT OR Apache-2.0"
description = "Converts a SVGator export to solidjs compatible import"
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.23"
clap = { version = "3.2.6", features = ["derive"] }